--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"version": "0.1.3",
 	"description": "Intelligently merge `package.json` files.",
 	"author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
-	"contributors" : [
-		"Enrico Aleandri <aleandrienrico@gmail.com>"
+	"contributors": [
+		"Enrico Aleandri <aleandrienrico@gmail.com>",
+		"Lucien Immink <lucien.immink@isaac.nl>"
 	],
 	"repository": {
 		"type": "git",
@@ -20,17 +21,21 @@
 	],
 	"main": "lib/merge.js",
 	"scripts": {
-		"test": "./node_modules/.bin/_mocha -R spec test/spec"
+		"test": "./node_modules/.bin/_mocha -R spec test/spec",
+		"preinstall": "npx npm-force-resolutions"
 	},
- "license" : "MIT",
+	"license": "MIT",
 	"dependencies": {
-		"jju": "^1.2.0",
-		"lodash": "^3.10.1",
-		"semver": "^4.3.6",
-		"semver-set": "^0.1.1"
+		"jju": "^1.4.0",
+		"lodash": "^4.17.21",
+		"semver": "^7.3.5",
+		"semver-set": "git+https://github.com/isaaceindhoven/semver-set.git"
 	},
 	"devDependencies": {
-		"mocha": "^2.2.5",
-		"chai": "^3.0.0"
+		"chai": "^4.3.4",
+		"mocha": "^8.3.2"
+	},
+	"resolutions": {
+		"lodash": "^4.17.21"
 	}
 }
