--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "merge-package-json",
-	"version": "0.1.3",
+	"name": "@isaaceindhoven/merge-package-json",
+	"version": "0.2.0",
 	"description": "Intelligently merge `package.json` files.",
 	"author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
 	"contributors": [
@@ -29,7 +29,7 @@
 		"jju": "^1.4.0",
 		"lodash": "^4.17.21",
 		"semver": "^7.3.5",
-		"semver-set": "git+https://github.com/isaaceindhoven/semver-set.git"
+		"@isaaceindhoven/semver-set": "git+https://github.com/isaaceindhoven/semver-set.git"
 	},
 	"devDependencies": {
 		"chai": "^4.3.4",
