--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@isaaceindhoven/merge-package-json",
+	"name": "@isaac.frontend/merge-package-json",
 	"version": "0.2.0",
 	"description": "Intelligently merge `package.json` files.",
 	"author": "Izaak Schroeder <izaak.schroeder@gmail.com>",
@@ -21,21 +21,17 @@
 	],
 	"main": "lib/merge.js",
 	"scripts": {
-		"test": "./node_modules/.bin/_mocha -R spec test/spec",
-		"preinstall": "npx npm-force-resolutions"
+		"test": "./node_modules/.bin/_mocha -R spec test/spec"
 	},
 	"license": "MIT",
 	"dependencies": {
 		"jju": "^1.4.0",
 		"lodash": "^4.17.21",
 		"semver": "^7.3.5",
-		"@isaaceindhoven/semver-set": "git+https://github.com/isaaceindhoven/semver-set.git"
+		"@isaac.frontend/semver-set": "^0.2.0"
 	},
 	"devDependencies": {
 		"chai": "^4.3.4",
 		"mocha": "^8.3.2"
-	},
-	"resolutions": {
-		"lodash": "^4.17.21"
 	}
 }
